--- a/mediscreen-back/src/main/resources/application.properties
+++ b/mediscreen-back/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
 #swagger
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+server.port=8081
