--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,25 @@ services:
       dockerfile: DockerFile
     depends_on:
       - mysql_db
+      - oc-notes
     volumes:
       - /data/mediscreen
     ports:
       - "8080:8080"
     links:
       - mysql_db:app_db
+      - oc-notes:app_notes
+
+  note_service:
+    image: oc-notes
+    build:
+      dockerfile: DockerFileNote
+    depends_on:
+      - mongo_db
+    ports:
+      - "8080:8080"
+    links:
+      - mongo_db:app_db
 
   mysql_db:
     image: "mysql:8.0"
@@ -25,3 +38,9 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: nE5kMc7JCGNqwDQM
       MYSQL_ROOT_PASSWORD: nE5kMc7JCGNqwDQN
+
+  mongo_db:
+    image: "mongo:4.4.3"
+    restart: always
+    ports:
+      - 27017:27017
