--- a/DockerFile
+++ b/DockerFile
@@ -1,3 +1,3 @@
 FROM openjdk:11-jdk
-COPY mediscreen-back/target/*.jar mediscreen.jar
-ENTRYPOINT ["java","-jar","/mediscreen.jar"]
+COPY com.abernathy.note-back/target/*.jar com.abernathy.note.jar
+ENTRYPOINT ["java","-jar","/com.abernathy.note.jar"]
