--- a/notes-back/src/main/resources/application.properties
+++ b/notes-back/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=test
+spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.repositories.type=auto
-server.port=8082
+server.port=8084
+server.address=localhost
+#swagger
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
