--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>mediscreen-back</module>
         <module>mediscreen-front</module>
         <module>notes-back</module>
+        <module>assess-back</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -17,7 +18,7 @@
 	<groupId>com.abernathy</groupId>
 	<artifactId>mediscreen</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>com.abernathy.note</name>
+    <name>com.abernathy.mediscreen</name>
 	<description>MediScreen Project</description>
 
 
